chore(project): merge changelog changes after stable patch (#16322)
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jygm7tnkbkj0rfx536f2a2vr
branchName: main
commitSha: f4e89908f7060604216f086736767471cdf9878b
commitUrl: https://github.com/Redocly/redocly/commit/f4e89908f7060604216f086736767471cdf9878b

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -24,7 +24,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch:
@@ -133,7 +133,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch:
@@ -162,7 +162,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -229,7 +229,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3415,7 +3415,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch:
@@ -3522,7 +3522,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch:
@@ -3551,7 +3551,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3600,7 +3600,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -6121,7 +6121,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch:
@@ -6228,7 +6228,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch:
@@ -6257,7 +6257,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -6303,7 +6303,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -8825,7 +8825,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch:
@@ -8928,7 +8928,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch:
@@ -8955,7 +8955,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -9014,7 +9014,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -11495,6 +11495,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.54.3:
+    timestamp: 1750673849000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies: {}
   0.55.0-next.7:
     timestamp: 1750666691000
     changes:
@@ -11504,7 +11511,7 @@
         - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
     dependencies: {}
   0.54.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch:
@@ -11561,7 +11568,7 @@
         - Improved accessibility by adding descriptive `alt` text to footer icons.
     dependencies: {}
   0.54.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch:
@@ -11578,7 +11585,7 @@
     dependencies:
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.54.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -11612,7 +11619,7 @@
         - Fixed list formatting in code walkthroughs.
     dependencies: {}
   0.54.0-next.8:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch:
@@ -13415,7 +13422,7 @@
     dependencies:
       '@redocly/replay': 0.14.0-next.7
   3.10.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch: []
@@ -13465,7 +13472,7 @@
     dependencies:
       '@redocly/replay': 0.14.0-next.1
   3.10.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch: []
@@ -13481,7 +13488,7 @@
       '@redocly/replay': 0.14.0-next.0
       '@redocly/theme': 0.55.0-next.0
   3.10.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - >-
@@ -13504,7 +13511,7 @@
     dependencies:
       '@redocly/replay': 0.13.0
   3.10.0-next.10:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -16521,7 +16528,7 @@
       '@redocly/redoc': 0.123.0-next.8
       '@redocly/theme': 0.55.0-next.7
   1.5.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch: []
@@ -16608,7 +16615,7 @@
       '@redocly/theme': 0.55.0-next.1
       '@redocly/redoc': 0.123.0-next.1
   1.5.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch: []
@@ -16631,7 +16638,7 @@
       '@redocly/redoc': 0.123.0-next.0
       '@redocly/theme': 0.55.0-next.0
   1.5.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Upgraded React to `19.x`.
@@ -16643,7 +16650,7 @@
       '@redocly/redoc-reef': 0.122.0
       '@redocly/redoc-revel': 0.122.0
   1.5.0-next.14:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -19676,7 +19683,7 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.7
   0.7.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch: []
@@ -19725,7 +19732,7 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.1
   0.7.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch: []
@@ -19740,14 +19747,14 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.0
   0.7.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
     dependencies:
       '@redocly/openapi-docs': 3.10.0
   0.7.0-next.10:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -21448,7 +21455,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.7
   0.13.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch: []
@@ -21499,7 +21506,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.13.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch: []
@@ -21516,7 +21523,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.13.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -21525,7 +21532,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.13.0-next.8:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
@@ -22362,6 +22369,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.5.3:
+    timestamp: 1750673849000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.54.3
   0.6.0-next.7:
     timestamp: 1750666691000
     changes:
@@ -22370,7 +22384,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.7
   0.5.2:
-    timestamp: 1750411910000
+    timestamp: 1750345067000
     changes:
       minor: []
       patch: []
@@ -22419,7 +22433,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.5.1:
-    timestamp: 1749653836000
+    timestamp: 1749650348000
     changes:
       minor: []
       patch: []
@@ -22434,7 +22448,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.5.0:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -22442,7 +22456,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.5.0-next.8:
-    timestamp: 1749548911000
+    timestamp: 1749544964000
     changes:
       minor: []
       patch: []
