docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jygmgcfppzsq437342xv7ms9
branchName: main
commitSha: 0dee1e69a86176616c2944f479711cae03afa725
commitUrl: https://github.com/Redocly/redocly/commit/0dee1e69a86176616c2944f479711cae03afa725

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,16 @@
 '@redocly/realm':
+  0.122.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.54.3
+      '@redocly/asyncapi-docs': 0.3.3
+      '@redocly/graphql-docs': 0.11.0
+      '@redocly/openapi-docs': 3.10.3
+      '@redocly/portal-plugin-mock-server': 0.7.3
   0.123.0-next.9:
     timestamp: 1750683741000
     changes:
@@ -24,7 +36,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
@@ -133,7 +145,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -162,7 +174,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -229,7 +241,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3390,6 +3402,18 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.122.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.54.3
+      '@redocly/asyncapi-docs': 0.3.3
+      '@redocly/graphql-docs': 0.11.0
+      '@redocly/openapi-docs': 3.10.3
+      '@redocly/portal-plugin-mock-server': 0.7.3
   0.123.0-next.9:
     timestamp: 1750683741000
     changes:
@@ -3415,7 +3439,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
@@ -3522,7 +3546,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -3551,7 +3575,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -3600,7 +3624,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Allowed debugging of API functions using `console`.
@@ -6096,6 +6120,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.122.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.54.3
+      '@redocly/asyncapi-docs': 0.3.3
+      '@redocly/graphql-docs': 0.11.0
+      '@redocly/openapi-docs': 3.10.3
+      '@redocly/portal-plugin-mock-server': 0.7.3
   0.123.0-next.9:
     timestamp: 1750683741000
     changes:
@@ -6121,7 +6157,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
@@ -6228,7 +6264,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -6257,7 +6293,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -6303,7 +6339,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -8802,6 +8838,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.122.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
+    dependencies:
+      '@redocly/theme': 0.54.3
+      '@redocly/asyncapi-docs': 0.3.3
+      '@redocly/graphql-docs': 0.11.0
+      '@redocly/openapi-docs': 3.10.3
+      '@redocly/portal-plugin-mock-server': 0.7.3
   0.123.0-next.9:
     timestamp: 1750683741000
     changes:
@@ -8825,7 +8873,7 @@
       '@redocly/openapi-docs': 3.11.0-next.7
       '@redocly/portal-plugin-mock-server': 0.8.0-next.7
   0.122.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
@@ -8928,7 +8976,7 @@
       '@redocly/openapi-docs': 3.11.0-next.1
       '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -8955,7 +9003,7 @@
       '@redocly/theme': 0.55.0-next.0
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Added the `lightboxStyle` attribute that customizes the image lightbox styles.
@@ -9014,7 +9062,7 @@
           unauthorized access.
     dependencies: {}
   0.122.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -11496,7 +11544,7 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
   0.54.3:
-    timestamp: 1750673849000
+    timestamp: 1750757267000
     changes:
       minor: []
       patch:
@@ -11511,7 +11559,7 @@
         - Fixed an issue where the Markdoc `tabs` tag incorrectly set the active state for the selected tab.
     dependencies: {}
   0.54.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch:
@@ -11568,7 +11616,7 @@
         - Improved accessibility by adding descriptive `alt` text to footer icons.
     dependencies: {}
   0.54.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch:
@@ -11585,7 +11633,7 @@
     dependencies:
       '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.54.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -11619,7 +11667,7 @@
         - Fixed list formatting in code walkthroughs.
     dependencies: {}
   0.54.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch:
@@ -13407,6 +13455,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.10.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.13.3
   3.11.0-next.8:
     timestamp: 1750683741000
     changes:
@@ -13422,7 +13477,7 @@
     dependencies:
       '@redocly/replay': 0.14.0-next.7
   3.10.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -13472,7 +13527,7 @@
     dependencies:
       '@redocly/replay': 0.14.0-next.1
   3.10.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -13488,7 +13543,7 @@
       '@redocly/replay': 0.14.0-next.0
       '@redocly/theme': 0.55.0-next.0
   3.10.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - >-
@@ -13511,7 +13566,7 @@
     dependencies:
       '@redocly/replay': 0.13.0
   3.10.0-next.10:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -16506,6 +16561,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.5.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.54.3
+      '@redocly/realm': 0.122.3
+      '@redocly/redoc': 0.122.3
+      '@redocly/redoc-reef': 0.122.3
+      '@redocly/redoc-revel': 0.122.3
   1.6.0-next.9:
     timestamp: 1750683741000
     changes:
@@ -16528,7 +16594,7 @@
       '@redocly/redoc': 0.123.0-next.8
       '@redocly/theme': 0.55.0-next.7
   1.5.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -16615,7 +16681,7 @@
       '@redocly/theme': 0.55.0-next.1
       '@redocly/redoc': 0.123.0-next.1
   1.5.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -16638,7 +16704,7 @@
       '@redocly/redoc': 0.123.0-next.0
       '@redocly/theme': 0.55.0-next.0
   1.5.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`.
@@ -16650,7 +16716,7 @@
       '@redocly/redoc-reef': 0.122.0
       '@redocly/redoc-revel': 0.122.0
   1.5.0-next.14:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -19668,6 +19734,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.7.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.10.3
   0.8.0-next.8:
     timestamp: 1750683741000
     changes:
@@ -19683,7 +19756,7 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.7
   0.7.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -19732,7 +19805,7 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.1
   0.7.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -19747,14 +19820,14 @@
     dependencies:
       '@redocly/openapi-docs': 3.11.0-next.0
   0.7.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
     dependencies:
       '@redocly/openapi-docs': 3.10.0
   0.7.0-next.10:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -21440,6 +21513,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.13.3:
+    timestamp: 1750757267000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.54.3
   0.14.0-next.8:
     timestamp: 1750683741000
     changes:
@@ -21455,7 +21535,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.7
   0.13.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -21506,7 +21586,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.13.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -21523,7 +21603,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.13.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -21532,7 +21612,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.13.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
@@ -22370,7 +22450,7 @@
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
   0.5.3:
-    timestamp: 1750673849000
+    timestamp: 1750757267000
     changes:
       minor: []
       patch: []
@@ -22384,7 +22464,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.7
   0.5.2:
-    timestamp: 1750345067000
+    timestamp: 1750411910000
     changes:
       minor: []
       patch: []
@@ -22433,7 +22513,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.1
   0.5.1:
-    timestamp: 1749650348000
+    timestamp: 1749653836000
     changes:
       minor: []
       patch: []
@@ -22448,7 +22528,7 @@
     dependencies:
       '@redocly/theme': 0.55.0-next.0
   0.5.0:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor:
         - Upgraded React to `19.x`. Removed support for React `18.x` and `17.x`.
@@ -22456,7 +22536,7 @@
     dependencies:
       '@redocly/theme': 0.54.0
   0.5.0-next.8:
-    timestamp: 1749544964000
+    timestamp: 1749548911000
     changes:
       minor: []
       patch: []
