docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jygwydz9a51sczk0an770mmr
branchName: main
commitSha: 84f418185c25a58b9381614d38d5f9a9ccfedc83
commitUrl: https://github.com/Redocly/redocly/commit/84f418185c25a58b9381614d38d5f9a9ccfedc83

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -24712,3 +24712,10 @@ reunite:
       patch:
         - Updated authentication email templates for clarity and consistency.
     dependencies: {}
+  v2025-06-24.1:
+    timestamp: 1750761675000
+    changes:
+      minor: []
+      patch:
+        - Improved error handling for JavaScript heap out of memory during project build.
+    dependencies: {}
