--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -16257,6 +16257,14 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/mock-server':
+  0.2.17:
+    timestamp: 1750934732000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750342295`.
+        - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1750261968`.
+    dependencies: {}
   0.2.16:
     timestamp: 1750321133000
     changes:
