docs(project): add Google SAML integration (#16305)
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jyp6eeqd1hw40jaghrg638za
branchName: main
commitSha: 583473983ebfc00c66fb461e6b72535091394ff4
commitUrl: https://github.com/Redocly/redocly/commit/583473983ebfc00c66fb461e6b72535091394ff4

--- a/docs/realm/sidebars.yaml
+++ b/docs/realm/sidebars.yaml
@@ -34,7 +34,9 @@
         - page: ./setup/how-to/configure-sso.md
           label: Configure SSO
         - page: ./setup/how-to/configure-azure-ad.md
-          label: Azure AD
+          label: Microsoft Entra ID
+        - page: ./setup/how-to/configure-google-sso.md
+          label: Google Workspace
     - page: setup/how-to/access-compliance-reports.md
       label: Compliance reports
 
