docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jz0a7p4gb5jwrq5c2epjrf61
branchName: main
commitSha: 6bb76b645f9f49d737fccc799acb7cc6994d0a0a
commitUrl: https://github.com/Redocly/redocly/commit/6bb76b645f9f49d737fccc799acb7cc6994d0a0a

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,24 @@
 '@redocly/realm':
+  0.123.0-next.10:
+    timestamp: 1751283323000
+    changes:
+      minor:
+        - Added `page` and `label` frontmatter properties to navigation buttons.
+        - Exposed `useUserTeams` hook to access teams assigned to the active user.
+      patch:
+        - Fixed issue with `api` filter in scorecard that prevented details from displaying.
+        - Fixed search indexing to include `code-snippet` content.
+        - Fixed incorrect auto-scrolling to anchor elements.
+        - Fixed occasional errors in long AI search conversations.
+        - Fixed anchor links not scrolling to the correct position when navigating from another page.
+        - Fixed malformed content handling in the markdown parsing pipeline.
+        - Fixed incorrect values in the `Rule status` scorecard.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.9
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.9
   0.122.3:
     timestamp: 1750757267000
     changes:
@@ -3402,6 +3422,25 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.10:
+    timestamp: 1751283323000
+    changes:
+      minor:
+        - Added `page` and `label` frontmatter properties to navigation buttons.
+      patch:
+        - Fixed issue with `api` filter in scorecard that prevented details from displaying.
+        - Fixed search indexing to include `code-snippet` content.
+        - Fixed incorrect auto-scrolling to anchor elements.
+        - Fixed occasional errors in long AI search conversations.
+        - Fixed anchor links not scrolling to the correct position when navigating from another page.
+        - Fixed malformed content handling in the markdown parsing pipeline.
+        - Fixed incorrect values in the `Rule status` scorecard.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.9
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.9
   0.122.3:
     timestamp: 1750757267000
     changes:
@@ -6120,6 +6159,24 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.10:
+    timestamp: 1751283323000
+    changes:
+      minor:
+        - Added `page` and `label` frontmatter properties to navigation buttons.
+        - Exposed `useUserTeams` hook to access teams assigned to the active user.
+      patch:
+        - Fixed search indexing to include `code-snippet` content.
+        - Fixed incorrect auto-scrolling to anchor elements.
+        - Fixed occasional errors in long AI search conversations.
+        - Fixed anchor links not scrolling to the correct position when navigating from another page.
+        - Fixed malformed content handling in the markdown parsing pipeline.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.9
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.9
   0.122.3:
     timestamp: 1750757267000
     changes:
@@ -8838,6 +8895,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.10:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch:
+        - Fixed occasional errors in long AI search conversations.
+        - Fixed anchor links not scrolling to the correct position when navigating from another page.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
+      '@redocly/asyncapi-docs': 0.4.0-next.9
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.9
   0.122.3:
     timestamp: 1750757267000
     changes:
@@ -11543,6 +11613,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.8:
+    timestamp: 1751283323000
+    changes:
+      minor:
+        - Added `page` and `label` frontmatter properties to navigation buttons.
+        - Exposed `useUserTeams` hook to access teams assigned to the active user.
+      patch:
+        - Fixed occasional errors in long AI search conversations.
+    dependencies: {}
   0.54.3:
     timestamp: 1750757267000
     changes:
@@ -13455,6 +13534,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.9:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.9
   3.10.3:
     timestamp: 1750757267000
     changes:
@@ -16569,6 +16655,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.10:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.10
+      '@redocly/redoc-reef': 0.123.0-next.10
+      '@redocly/redoc-revel': 0.123.0-next.10
+      '@redocly/theme': 0.55.0-next.8
+      '@redocly/redoc': 0.123.0-next.10
   1.5.3:
     timestamp: 1750757267000
     changes:
@@ -19742,6 +19839,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.9:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.9
   0.7.3:
     timestamp: 1750757267000
     changes:
@@ -21521,6 +21625,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.9:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
   0.13.3:
     timestamp: 1750757267000
     changes:
@@ -22457,6 +22568,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.8:
+    timestamp: 1751283323000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.8
   0.5.3:
     timestamp: 1750757267000
     changes:
