docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jz2yedjdsh10xtra0b502z0p
branchName: main
commitSha: e4cab0bb1c3a0fe79bab290bac8b8daf209dbb7a
commitUrl: https://github.com/Redocly/redocly/commit/e4cab0bb1c3a0fe79bab290bac8b8daf209dbb7a

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -24852,3 +24852,12 @@ reunite:
       patch:
         - Fixed API registry snapshot details not displaying in the UI.
     dependencies: {}
+  v2025-07-01.2:
+    timestamp: 1751371660000
+    changes:
+      minor: []
+      patch:
+        - Resolved permissions conflict that restricted project administrators’ access with the `MEMBER` organization role.
+        - Fixed issue where user session omitted some teams after SSO login.
+        - Added email notifications for failed remote content auto-merges.
+    dependencies: {}
