--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,17 @@
 '@redocly/realm':
+  0.123.0-next.11:
+    timestamp: 1751381431000
+    changes:
+      minor:
+        - Added `Skip to content` button to enhance keyboard navigation.
+        - Fixed decoding errors in encoded content returned by API functions, for example, gzip-compressed data.
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
+      '@redocly/asyncapi-docs': 0.4.0-next.10
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.10
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.10
   0.123.0-next.10:
     timestamp: 1751283323000
     changes:
@@ -3422,6 +3435,19 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.11:
+    timestamp: 1751381431000
+    changes:
+      minor:
+        - Added `Skip to content` button to enhance keyboard navigation.
+        - Fixed decoding errors in encoded content returned by API functions, for example, gzip-compressed data.
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
+      '@redocly/asyncapi-docs': 0.4.0-next.10
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.10
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.10
   0.123.0-next.10:
     timestamp: 1751283323000
     changes:
@@ -6159,6 +6185,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.11:
+    timestamp: 1751381431000
+    changes:
+      minor:
+        - Added `Skip to content` button to enhance keyboard navigation.
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
+      '@redocly/asyncapi-docs': 0.4.0-next.10
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.10
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.10
   0.123.0-next.10:
     timestamp: 1751283323000
     changes:
@@ -8895,6 +8933,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.11:
+    timestamp: 1751381431000
+    changes:
+      minor:
+        - Added `Skip to content` button to enhance keyboard navigation.
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
+      '@redocly/asyncapi-docs': 0.4.0-next.10
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.10
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.10
   0.123.0-next.10:
     timestamp: 1751283323000
     changes:
@@ -11613,6 +11663,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.9:
+    timestamp: 1751381431000
+    changes:
+      minor:
+        - Added `Skip to content` button to enhance keyboard navigation.
+      patch: []
+    dependencies: {}
   0.55.0-next.8:
     timestamp: 1751283323000
     changes:
@@ -13534,6 +13591,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.10:
+    timestamp: 1751381431000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.10
   3.11.0-next.9:
     timestamp: 1751283323000
     changes:
@@ -16655,6 +16719,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.11:
+    timestamp: 1751381431000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
+      '@redocly/realm': 0.123.0-next.11
+      '@redocly/redoc': 0.123.0-next.11
+      '@redocly/redoc-reef': 0.123.0-next.11
+      '@redocly/redoc-revel': 0.123.0-next.11
   1.6.0-next.10:
     timestamp: 1751283323000
     changes:
@@ -19839,6 +19914,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.10:
+    timestamp: 1751381431000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.10
   0.8.0-next.9:
     timestamp: 1751283323000
     changes:
@@ -21625,6 +21707,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.10:
+    timestamp: 1751381431000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
   0.14.0-next.9:
     timestamp: 1751283323000
     changes:
@@ -22568,6 +22657,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.9:
+    timestamp: 1751381431000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.9
   0.6.0-next.8:
     timestamp: 1751283323000
     changes:
