docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jz7vanaaybm22pdea6dmqdag
branchName: main
commitSha: 8d93a833f57165c9463f417b337132d61e5b694b
commitUrl: https://github.com/Redocly/redocly/commit/8d93a833f57165c9463f417b337132d61e5b694b

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,6 +1,6 @@
 '@redocly/realm':
   0.123.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Exposed `usePageVersions` and `useActivePageVersion` hooks to access the current page version in React pages.
@@ -3479,7 +3479,7 @@
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
   0.123.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Exposed `usePageVersions` and `useActivePageVersion` hooks to access the current page version in React pages.
@@ -6269,7 +6269,7 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
   0.123.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Exposed `usePageVersions` and `useActivePageVersion` hooks to access the current page version in React pages.
@@ -9054,7 +9054,7 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
   0.123.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Added **Skip to content** button to enhance keyboard navigation.
@@ -11818,7 +11818,7 @@
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
   0.55.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Exposed `usePageVersions` and `useActivePageVersion` hooks to access the current page version in React pages.
@@ -13767,7 +13767,7 @@
     dependencies: {}
 '@redocly/openapi-docs':
   3.11.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor: []
       patch:
@@ -15955,12 +15955,11 @@
     dependencies: {}
 '@redocly/graphql-docs':
   0.12.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Added support for displaying deprecated queries, mutations, and subscriptions in the GraphQL documentation.
-      patch:
-        - Enter prerelease mode.
+      patch: []
     dependencies: {}
   0.12.0-next.1:
     timestamp: 1749821473000
@@ -16829,7 +16828,7 @@
     dependencies: {}
 '@redocly/portal-legacy-ui':
   0.6.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor: []
       patch: []
@@ -16917,7 +16916,7 @@
     dependencies: {}
 '@redocly/portal-plugin-async-api':
   1.6.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor: []
       patch: []
@@ -20123,7 +20122,7 @@
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
   0.8.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor: []
       patch: []
@@ -21923,7 +21922,7 @@
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
   0.14.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor:
         - Added highlighting for path parameters in request URLs.
@@ -22885,7 +22884,7 @@
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
   0.6.0:
-    timestamp: 1751530341448
+    timestamp: 1751536139000
     changes:
       minor: []
       patch:
